--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "argon-dashboard-angular",
+  "name": "ender-template-angular",
   "version": "1.4.0",
   "scripts": {
     "ng": "ng",
